syntax = "proto3";

package daprinternal;

import "google/protobuf/any.proto";

// Dapr Internal definitions
service DaprInternal {
  rpc CallActor (CallActorEnvelope) returns (InvokeResponse) {}
  rpc CallLocal (LocalCallEnvelope) returns (InvokeResponse) {}
}

message LocalCallEnvelope {
    google.protobuf.Any data = 1;
    string method = 2;
    map<string,string> metadata = 3;
}

message CallActorEnvelope {
  string actorID = 1;
  string actorType = 2;
  string method = 3;
  google.protobuf.Any data = 4;
  map<string,string> metadata = 5;
}

message InvokeResponse {
  google.protobuf.Any data = 1;
  map<string,string> metadata = 2;
}

message SaveStateEnvelope {
  repeated KeyVal state = 1;
}

message KeyVal {
  string key = 1;
  google.protobuf.Any value = 2;
}

message GetStateEnvelope {
  string key = 1;
}

// Placement service
service PlacementService {
    rpc ReportDaprStatus(stream Host) returns (stream PlacementOrder) {}
}

message PlacementOrder {
  PlacementTables tables = 1;
  string operation = 2;
}

message PlacementTables {
  map<string, PlacementTable> entries = 1;
  string version = 2;
}

message PlacementTable {
  map<uint64, string> hosts = 1;
  repeated uint64 sortedSet = 2;
  map<string, Host> loadMap = 3;
  int64 totalLoad = 4;
}

message Host {
  string name = 1;
  int64 port = 2;
  int64 load = 3;
  repeated string entities = 4;
  string id = 5;
}
